products/src/main/java/com/example/products/ui/errors/ProductDetailError.kt
package com.example.products.ui.errors

sealed class ProductDetailError {
    object GetProductDetailError : ProductDetailError()
}